--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -15,11 +15,17 @@ set(CORE_INC_DIR
  CACHE PATH "CORE INCLUDE SOURCE PATH"
 )
 
-add_library(core STATIC ${CORE_SRC} ${CORE_INC})
+add_library(core STATIC ${CORE_SRC} ${CORE_INC}
+        serinity/Shader.cpp
+        serinity/Shader.h
+        ew/external/glad.h
+        ew/external/glad.cpp
+)
 
-find_package(OpenGL REQUIRED)
+target_link_libraries(core PUBLIC glfw glm)
 
-target_link_libraries(core PUBLIC IMGUI)
+
+
 
 install (TARGETS core DESTINATION lib)
 install (FILES ${CORE_INC} DESTINATION include/core)
