Created Texture2D class, but have not implemented it yet
  * Updated CMakeLists.txt to include new class
  * Created basic class header and am using Serinity namespace

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -20,6 +20,8 @@ add_library(core STATIC ${CORE_SRC} ${CORE_INC}
         serinity/Shader.h
         ew/external/glad.h
         ew/external/glad.cpp
+        serinity/Texture2D.cpp
+        serinity/Texture2D.h
 )
 
 target_link_libraries(core PUBLIC glfw glm)
