--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ include(external/imgui.cmake)
 include(external/glm.cmake)
 
 add_subdirectory(core)
-add_subdirectory(assignments/assignment1_helloTriangle)
+add_subdirectory(assignments/assignment1)
 add_subdirectory(assignments/assignment2)
 add_subdirectory(assignments/assignment4)
+add_subdirectory(assignments/assignment5)
 add_subdirectory(assignments/demos)
